[metadata]
name = starfish
summary = Pipelines and pipeline components for the analysis of image-based transcriptomics data
author = Deep Ganguli
author_email = dganguli@chanzuckerberg.com
license = MIT
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://spacetx-starfish.readthedocs.io/en/latest/
project_urls =
    Bug Tracker = https://github.com/spacetx/starfish/issues
    Documentation = https://spacetx-starfish.readthedocs.io/en/latest/
    Source Code = https://github.com/spacetx/starfish
classifier =
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Operating System :: POSIX"
    Operating System :: Unix"
    Operating System :: MacOS :: MacOS X"
    License :: OSI Approved :: MIT License"
    Programming Language :: Python :: 3.6"
keywords =
    single-cell
    image-based
    transcriptomics

[entry_points]
console_scripts =
    starfish = starfish.starfish:starfish

[extras]
napari = napari-gui==0.0.5.1

[files]
packages =
    starfish
    sptx_format
#data_files =
#    etc/pbr = etc/*
#    etc/init =
#        pbr.packaging.conf
#        pbr.version.conf

[wheel]
universal = 1
