[versioneer]
VCS = git
style = pep440
versionfile_source = starfish/core/_version.py
versionfile_build = starfish/core/_version.py
parentdir_prefix = starfish-
tag_prefix =

[metadata]
name = starfish
summary = Pipelines and pipeline components for the analysis of image-based transcriptomics data
author = Deep Ganguli
author_email = dganguli@chanzuckerberg.com
license = MIT
long_description = README.rst
long_description_content_type = text/x-rst; charset=UTF-8
home-page = https://spacetx-starfish.readthedocs.io/en/latest/
project_urls =
    Bug Tracker = https://github.com/spacetx/starfish/issues
    Documentation = https://spacetx-starfish.readthedocs.io/en/latest/
    Source Code = https://github.com/spacetx/starfish
classifier =
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
keywords =
    single-cell
    image-based
    transcriptomics
